added a bit to acknowledgements

--- a/project_report.tex
+++ b/project_report.tex
@@ -112,8 +112,7 @@ In this report we present two approaches in designing the game logic, the first 
 \thispagestyle{plain}
 \onehalfspacing
 \addcontentsline{toc}{chapter}{Acknowledgements}
-We could like to thank Prof. Sim Khe Chai for the patience and guidance along the semester. Without Prof. Sim, we would not have gone this far. I don't know what to write here you guys please fill in. \\\\
-(TODO)
+We could like to thank Prof. Sim Khe Chai for the patience and guidance along the semester. Without Prof. Sim, we would not have gone this far. We would also like to thank our fellow classmates for the interesting discussions we had in our tutorial regarding this project that made us think deeper about the problem.
 \end{abstract}
 %===============================================================================
 % End of Acknowledgements
