--- a/project_report.tex
+++ b/project_report.tex
@@ -372,14 +372,36 @@ In the case that there is a finite number of iPads, the DP table will be a 2D ar
 The pseudo code to calculate the DP table is as follows
 
 \begin{algorithm}[H]
-        \caption{Calculate the cost table for fixed iPad cost (finite number of iPads)}
-        \begin{algorithmic}[1]
-            \REQUIRE N, L, iPadCost
-            \STATE Initialise a 2D table DP[N+1][L+1], where the value of each cell is INFINITY
-            \STATE For all table cells DP[n][l] where l $\leq$ 1, initialise the value of the cell to be l*(1 + iPadCost)
-            \STATE For all table cells DP[n][l] where n = 1, initialise the value of the cell to be l + iPadCost
-            \STATE For all other tables cells DP[n][l] , the value at that cell is equal to min(1 + max(DP[x-1][n-1] + iPadCost, DP[L-x][n])) for $1 \leq x \leq l$
-        \end{algorithmic}
+\caption{Calculate the cost table for fixed iPad cost (finite number of iPads}
+\begin{algorithmic}[1]
+\REQUIRE N, L, iPadCost
+\STATE $table \leftarrow 2DTable(N, L)$
+\FOR{$i = 0$ \TO $N$}
+	\FOR{$j = 0$ \TO $L$}
+		\STATE $table[i][j] = \infty$
+	\ENDFOR
+\ENDFOR
+\FOR{$i = 0$ \TO $N$}
+	\FOR{$j = 0$ \TO $1$}
+		\STATE $table[i][j] = j*(1 + iPadCost)$
+	\ENDFOR
+\ENDFOR
+\FOR{$i = 1$ \TO $L$}
+	\STATE $table[1][i] = i + iPadCost$
+\ENDFOR
+\FOR{$i = 1$ \TO $N$}
+	\FOR{$j = 1$ \TO $L$}
+		\STATE $best \leftarrow \infty$
+		\FOR{$k = 1$ \TO $j$}
+			\STATE $result = max(table[i - 1][k - 1] + iPadCost, table[i][j - k])$
+			\IF{$result < best$}
+				\STATE $best \leftarrow result$
+			\ENDIF
+		\ENDFOR
+		\STATE $table[i][j] = best + 1$
+	\ENDFOR
+\ENDFOR
+\end{algorithmic}
 \end{algorithm}
 
 We can see that the difference between this and the previous cost table approach without iPad cost is only that the iPad cost is also added to the original cost in each cell
@@ -390,15 +412,27 @@ In the case that there is an infinite number of iPads, the DP table only needs t
 
 The pseudo code to calculate the DP table is as follows
 
-\begin{algorithm}
-        \caption{Calculate the cost table for fixed iPad cost (infinite number of iPads)}
-        \begin{algorithmic}[1]
-            \REQUIRE L, iPadCost
-            \STATE Initialise a 1D table DP[L+1], where the value of each cell is INFINITY
-            \STATE Let DP[0] be 0
-            \STATE Let DP[1] be iPadCost
-            \STATE For all other tables cells DP[n] , the value at that cell is equal to min(1 + max(DP[x-1] + iPadCost, DP[L-x])) for $1 \leq x \leq l$
-        \end{algorithmic}
+\begin{algorithm}[H]
+\caption{Calculate the cost table for fixed iPad cost (infinite number of iPads)}
+\begin{algorithmic}[1]
+\REQUIRE L, iPadCost
+\STATE $table \leftarrow 1DTable(L)$
+\FOR{$i = 0$ \TO $L$}
+	\STATE $table[i] = \infty$
+\ENDFOR
+\STATE $table[0] = 0$
+\STATE $table[1] = iPadCost$
+\FOR{$i = 2$ \TO $L$}
+	\STATE $best \leftarrow \infty$
+	\FOR{$k = 1$ \TO $j$}
+		\STATE $result = max(table[k - 1] + iPadCost, table[j - k])$
+		\IF{$result < best$}
+			\STATE $best \leftarrow result$
+		\ENDIF
+	\ENDFOR
+	\STATE $table[i] = best + 1$
+\ENDFOR
+\end{algorithmic}
 \end{algorithm}
 
 \section{iPad with dynamic cost}
@@ -407,28 +441,51 @@ We can first define a function f, where f(n) denotes the cost of the $n^{th}$ be
 Intuitively, we can see that this problem is very close to the fixed iPad cost problem. We can again use the cost table. approach to pre-calculate the DP cost table. The difference lies in the fact that we also now need to consider how many iPads have been crushed before.
 Therefore, to extend the solution for the fixed cost problem to also work in this, we can also store an attribute denoting the number of Ipad crushed. Each cell will then have two attributes, the cost and the number of iPad crushed
 The pseudo code to calculate the DP table is as follows
-\begin{algorithm}
-        \caption{Calculate the cost table for fixed iPad cost}
-        \begin{algorithmic}[1]
-            \REQUIRE N, L, f
-            \STATE Initialise a 2D table $DP[N+1][L+1]$, where each cell has cost $INFINITY$ and numberOfiPadCrushed  $0$
-            \STATE For all table cells $DP[n][l]$ where $l \leq 1$, initialise the cost of the cell to be $l*(1 + f(l))$ and numberOfiPadCrushed  to be $l$
-            \STATE For all table cells $DP[n][l]$ where $n = 1$, initialise the cost of the cell to be $l+f(1)$ and numberOfiPadCrushed to be $1$
-            \STATE For all other tables cell $DP[n][l]$
-            \INDSTATE For all $x$ in $1 \leq x \leq l$
-            \INDSTATE[2] ipadCostWhenCrushed = f(DP[x-1][n-1].numberOfiPadCrushed +1)
-            \INDSTATE[2] If DP[L-x][n].cost >= DP[x-1][n-1].cost + ipadCostWhenCrushed
-            \INDSTATE[3] cost = DP[L-x][n].cost + 1
-            \INDSTATE[3] numberOfiPadCrushed = DP[L-x][n].numberOfiPadCrushed
-            \INDSTATE[2] Otherwise
-            \INDSTATE[3] cost = DP[x-1][n-1].cost + ipadCostWhenCrushed
-            \INDSTATE[3] numberOfiPadCrushed = DP[x-1][n-1].numberOfiPadCrushed +1
-            \INDSTATE[2] If cost $\leq$ DP[n][l]
-            \INDSTATE[3] DP[n][l].cost = cost
-            \INDSTATE[3] DP[n][l].numberOfiPadCrushed = numberOfiPadCrushed
 
-        \end{algorithmic}
+\begin{algorithm}[H]
+\caption{Calculate the cost table for dynamic iPad cost}
+\begin{algorithmic}[1]
+\REQUIRE N, L, f
+\STATE $table \leftarrow 2DTable(N, L)$
+\FOR{$i = 0$ \TO $N$}
+	\FOR{$j = 0$ \TO $L$}
+		\STATE $table[i][j].cost = \infty$
+		\STATE $table[i][j].numberOfiPadCrushed = 0$
+	\ENDFOR
+\ENDFOR
+\FOR{$i = 0$ \TO $N$}
+	\FOR{$j = 0$ \TO $1$}
+		\STATE $table[i][j].cost = j*(1 + f(j))$
+		\STATE $table[i][j].numberOfiPadCrushed = j$
+	\ENDFOR
+\ENDFOR
+\FOR{$i = 1$ \TO $L$}
+	\STATE $table[1][i].cost = i + f(1)$
+	\STATE $table[1][i].numberOfiPadCrushed = 1$
+\ENDFOR
+\FOR{$i = 1$ \TO $N$}
+	\FOR{$j = 1$ \TO $L$}
+		\STATE $best \leftarrow \infty$
+		\FOR{$k = 1$ \TO $j$}
+			\STATE $ipadCostWhenCrushed =  f(table[k-1][i-1].numberOfiPadCrushed +1)$
+			\STATE $result = max(table[i - 1][k - 1] + iPadCost, table[i][j - k])$
+			\IF{$table[j-k][i].cost >= table[k-1][i-1].cost + ipadCostWhenCrushed$}
+				\STATE $resultCost= table[j-k][i].cost$
+				\STATE resultNumberOfiPadCrushed $= table[j-k][i].numberOfiPadCrushed$
+			\ELSE
+				\STATE $resultCost= table[k-1][i-1].cost + ipadCostWhenCrushed$
+				\STATE $resultNumberOfiPadCrushed = table[k-1][i-1].$numberOfiPadCrushed $+ 1$	
+			\ENDIF
+			\IF{$resultCost < best$}
+				\STATE $best \leftarrow resultCost$
+			\ENDIF
+		\ENDFOR
+		\STATE $table[i][j].cost = best + 1$
+	\ENDFOR
+\ENDFOR
+\end{algorithmic}
 \end{algorithm}
+
 %===============================================================================
 % End of Chapter 6
 %===============================================================================
