--- a/project_report.tex
+++ b/project_report.tex
@@ -84,7 +84,7 @@ Prof. Sim Khe Chai
 \onehalfspacing
 \addcontentsline{toc}{chapter}{Abstract}
 In this project, we were asked to design the game logic for ``iPad Crusher'', an iOS game that Prof. Sim is developing as an adaptation to the Egg Dropping Problem. Given a certain number of iPads and strength levels, the player is asked to find the lowest strength level that would break an iPad. Similar to the Egg Dropping Puzzle, the goal of the game is to find the best strategy so that it involves the fewest number of crushing in the worst-case scenario. \\\\
-In this report we present two approaches in designing the game logic, the first is the original solution that we came up with, which is to generate the cost table and make the game decisions based on the costs. The second approach is one that Prof. Sim briefly mentioned, which decides based on the optimum level stored in a table. We would discuss the advantages and disadvantages of each of the two approaches, as well as different implementations of them. Lastly we would discuss some interesting extension of the problem such as adding an extra cost for breaking an iPad, and a variant of it with unlimited number of iPads, etc. In the end we conclude that for the original game logic, the cost table approach would be the better choice, whereas for some extensions, the decision tree approach would be better.
+In this report we present three approaches in designing the game logic, the first is the original solution that we came up with, which is to generate the cost table and make the game decisions based on the costs. The second approach is one that Prof. Sim briefly mentioned, which decides based on the optimum level stored in a table. The third approach is one that we found online, the combinatorics approach. We would discuss the advantages and disadvantages of each of the three approaches, as well as different implementations of them. Lastly we would discuss some interesting extension of the problem such as adding an extra cost for breaking an iPad, and a variant of it with unlimited number of iPads, etc. In the end we conclude that for the original game logic, the cost table approach would be the better choice, whereas for some extensions, the decision tree approach would be better.
 
 \subsubsection*{Subject Descriptors:\\}
 \begin{description}[labelindent=1cm]
