--- a/project_report.tex
+++ b/project_report.tex
@@ -307,17 +307,30 @@ There are some minor disadvantages though, and they include the conditions that 
 Besides the Dynamic Programming approach to this iPad Crushing problem, we also found an interesting alternative approach online using Combinatorics to calculate how many times we need to crush the iPad in the worst case \cite{randomblogpost}. The original author describes it as a solution to the classic Egg Dropping Puzzle. Here, we formulate the solution in terms of our iPad Crushing problem and make some corrections.
 
 \section{Theory}
-Before we begin discussing the solution, we need to reiterate our definition of a strategy to solve the iPad Crushing problem. A strategy is a binary decision tree, with each node representing a level of strength that we will use to try crushing the iPad. Following the left branch represents the scenario that the iPad survives the crush, while the right branch represents the scenario when the iPad does not survive the crush. A leaf of the tree represents the the minimum level of strength to crush the iPad that we have found.
+Before we begin discussing the solution, we need to reiterate our definition of a strategy to solve the iPad Crushing problem. A strategy is a binary decision tree, with each node representing a level of strength that we will use to try crushing the iPad. Following the left branch represents the scenario that the iPad survives the crush, while the right branch represents the scenario when the iPad does not survive the crush. A leaf of the tree represents the the minimum level of strength to crush the iPad that we have found. Figure \ref{fig:comb-original} illustrates a decision tree when there are 3 iPads and 10 strength levels.
+
+\begin{figure}
+	\centering
+	\begin{subfigure}{1.0\textwidth}
+		\includegraphics[width=\textwidth]{comb-original}
+		\caption{Decision tree of the optimal strategy with 3 iPads and 10 strength levels}
+		\label{fig:comb-original}
+	\end{subfigure}
+	\begin{subfigure}{1.0\textwidth}
+		\includegraphics[width=\textwidth]{comb-binary-sequence}
+		\caption{How the decision tree is converted to binary sequences}
+		\label{fig:comb-binary-sequence}
+	\end{subfigure}
+	\caption{Example of a decision tree and its conversion to binary sequences}
+\end{figure}
 
 The number of crushings we need to do to determine the minimum strength level to crush the iPad is the length of a path from the root node to a leaf. Hence, the number of crushings in the worst case is just the height of the decision tree. The goal of the game is to find a decision tree with minimum height.
 
 Similar to the dynamic programming approach, given the number of levels $L$ and the number of iPads $N$, we will need to find the minimum height $H$ of a decision tree to solve this iPad Crushing Problem. However, we will do this by formulating a slightly different problem. This is quite similar to the proof that all comparison-based sorting algorithms need to make at least $\log n$ comparisons in the worst case. An iPad Crushing problem with $N$ iPads and $L$ strength levels has a decision tree of height $H$. We will find the maximum $L$, given $N$ and $H$.
 
-We will count the number of possible paths in the decision tree of height $H$. The number of paths is equal to the number of  leaves, which is exactly $L+1$, as there are $L+1$ possible values for the minimum strength level to crush the iPad.
+We will count the number of possible leaves in the decision tree of height $H$. We note that every path from the root node to a leaf can branch to the right (the iPad does not survive) at most $N$ times. Hence each leaf can be represented by a binary sequence of 1 (left) and 0 (right), with at most $N$ zeros (rights). Since the height of our decision tree is $H$, the length of each binary sequence is at most $H$. For a binary sequence with length less than $H$, we can append it with ones until the length becomes $H$. Note that this is a one-to-one transformation because there are no 2 leaves in the same tree such that the first leaf's binary sequence starts with the same digits as the second leaf's binary sequence (e.g. if there is a leaf 010, there cannot be any leaf that starts with 010, hence there will not be any duplication when we append 010 with 1's). Due to this injectivity, the number of leaves possible is at most the number of binary sequences of length $H$ with at most $N$ zeros. There are ${H \choose k}$ binary sequences of length $H$ with $k$ zeros. Therefore, the maximum number of paths in a decision tree of height $H$ is $\sum_{k=0}^{N} {H \choose k}$.
 
-In addition, every path from the root node to a leaf can branch to the right (the iPad does not survive) at most $N$ times. Hence each path can be represented by a binary sequence of 1 (left) and 0 (right), with at most $N$ zeros (rights). Since the height of our decision tree is $H$, the length of each path is at most $H$. For a path with length less than $H$, we can append it with ones such that the length of its binary sequence representation is always $H$. This is a one-to-one transformation because no path's binary sequence can be contained in another. Hence we have a bijection between the set of possible paths and the set of binary sequence of length $H$ with at most $N$ zeros. There are ${H \choose k}$ binary sequences of length $H$ with $k$ zeros. Therefore, the maximum number of paths in a decision tree of height $H$ is $\sum_{k=0}^{N} {H \choose k}$.
-
-Combine the previous two paragraphs, we arrive at the inequality: \[\sum_{k=0}^{N} {H \choose k} \geq L+1\]
+Obviously, the number of  leaves is exactly $L+1$, as there are $L+1$ possible values for the minimum strength level to crush the iPad. Thus, we arrive at the inequality: \[\sum_{k=0}^{N} {H \choose k} \geq L+1\]
 
 So back to our original problem, the decision tree for this iPad Crushing problem with $N$ iPads and $L$ strength levels will have the minimum height $H$ such that the above inequality holds.
 
