--- a/project_report.tex
+++ b/project_report.tex
@@ -352,11 +352,13 @@ Based on the theory discussed in the previous section, together with the fact th
 \end{algorithm}
 
 \section{Discussion}
-We can use the algorithm outlined in the previous section to fill in our $N \times L$ DP table. The running time of this algorithm is dependent on the size of the answer it gets, which grows slower than $O(L)$ - the cost to fill in one entry for the dynamic programming approach\footnote{This is our observation. We do not have enough mathematical knowledge to prove it.}. Hence, we would expect that this algorithm runs faster than the dynamic programming one. Our tests verify this hypothesis. Therefore, an advantage of this approach would be its faster running time.
+We can use the algorithm outlined in the previous section to fill in our $N \times L$ DP table. The running time of this algorithm is dependent on the size of the answer it gets. According to our test, this grows slower than $O(L)$ - the cost to fill in one entry for the dynamic programming approach, hence this combinatoric is faster than the dynamic programming approach. However, we do not have the necessary mathematical tools to prove this result rigorously. Nevertheless, an advantage of this approach would be its faster running time.
 
-However, the downside of this approach is that it is harder to tweak to solve modified versions of the iPad Crushing problem. We tried to tweak it to solve the problem when the cost of an iPad is 5. What we have come up with is, to replace each branch to the right with 6 consecutive branchings to the right. Hence the total number of possible paths will be the number of binary sequences of length $H$ such that zeros can only appear in group of 6, and there are at most $N$ groups of 6 zeros. To solve this, we need to consider a group of 6 zeros as one units (one 0), which decreases the length of the sequence to $H - 5 \times number\_of\_groups$. This gives us a more complicated inequality: \[\sum_{k=0}^{N} {H-5k \choose k} \geq L+1\]
+At first, we thought that the downside of this approach would be its inflexibility, i.e. it is harder to tweak to solve modified versions of the iPad Crushing problem. However, we actually manage to tweak it to solve the modified versions as well.
 
-We can also modify this approach to solve the problem when there are inifinitely many available iPad for use. Instead of summing until $N$, we can sum until ${H-5k \choose k}$ still makes sense, that is until $\lfloor H/5 \rfloor$. This gives us the inequality: \[\sum_{k=0}^{\lfloor H/5 \rfloor} {H-5k \choose k} \geq L+1\]
+To solve the problem when the cost of an iPad is a constant $c$, we need replace each branch to the right with $(c+1)$ consecutive branchings to the right. Hence the total number of possible paths will be the number of binary sequences of length $H$ such that zeros can only appear in group of $(c+1)$, and there are at most $N$ groups of $(c+1)$ zeros. To solve this, we need to consider a group of $(c+1)$ zeros as one units (one 0), which decreases the length of the sequence to $H - c \times number\_of\_groups$. This gives us a more complicated inequality, but can still be substituted into the proposed algorithm to solve the question: \[\sum_{k=0}^{N} {H-ck \choose k} \geq L+1\]
+
+Even when there are inifinitely many available iPad for use, the inequality can be modified to solve the problem. Instead of summing until $N$, we can sum until ${H-ck \choose k}$ still makes sense, that is until $\lfloor H/c \rfloor$. This gives us the inequality: \[\sum_{k=0}^{\lfloor H/c \rfloor} {H-ck \choose k} \geq L+1\]
 
 A modification can also be made to solve the problem with dynamic iPad cost. Let $f(x)$ be the function that return the cost of the $x^{th}$ iPad crushed. We define the function $S(x)$ as the sum of the cost of the 1st $x$ iPads crushed, i.e.: \[S(x) = \sum_{i=0}^x f(i)\] The core inequality essential to the combinatoric method will then become: \[\sum_{\substack{k \in \mathbb{Z}_{\geq 0}\\ S(k) < H}} {H-S(k) \choose k} \geq L+1\]
 
